# pytext

./: LICENSE  README.md  pyproject.toml
pytext/: __init__.py  consoleColours.py
tests/: testConsoleText.py
